[project]
name = "runestone"
version = "8.1.10"
description = "Sphinx extensions for writing interactive documents."
authors = [{ name = "Brad Miller", email = "bonelake@mac.com" }]
requires-python = ">=3.10.0,<4"
readme = "README.rst"
keywords = [
    "runestone",
    "sphinx",
    "ebook",
    "oer",
    "education",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Plugins",
    "Environment :: Web Environment",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Education",
    "Topic :: Text Processing :: Markup",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "cogapp>=2.5",
    "click>=8,<9",
    "CodeChat==1.9.3",
    "jinja2>=3.1.0,<4",
    "Paver>=1.2.4",
    "six>1.12",
    "Sphinx>=5.0.0,<6",
    "sphinxcontrib-paverutils>=1.18.1",
    "SQLAlchemy>=2.0.0,<3",
    "toml>=0.10.2,<0.11",
    "json2xml>=3.21.0,<4",
    "sphinx-reredirects>=0.1.2,<0.2",
    "psycopg2-binary>=2.9.6,<3",
    "lxml>=6.0,<7",
    "myst-parser>=1.0.0,<2",
    "pretext>=2.35.0,<3",
    "jupyter-sphinx<0.5",
    "jupyterlab>=4.2.4,<5",
    "scikit-learn>=1.5.1,<2",
    "ipyleaflet>=0.19.2,<0.20",
    "aiosqlite>=0.18.0",
    "cryptography>=46.0.0,<47",
    "setuptools<81.0.0",
    "standard-asyncore>=3.13.0,<4",
    "standard-imghdr>=3.13.0,<4",
    "standard-cgi>=3.13.0,<4",
    "python-dotenv>=1.0.0,<2",
    "pydantic>=2.0.0,<3",
    "fastapi>=0.115.0,<0.116",
    "asyncpg>=0.30.0,<0.31",
    "greenlet>=3.0.0,<4",
    "dateutils>=0.6.12,<0.7",
    "pyhumps>=3.8.0,<4",
    "pydal>=20230521.1",
    "pydantic-settings>=2.0.3,<3",
    "jupyterlite-sphinx>=0.9.3,<0.10",
]

[project.urls]
Repository = "https://github.com/RunestoneInteractive/rs"
Documentation = "https://runestone-monorepo.readthedocs.io/en/latest/index.html"

[project.scripts]
runestone = "runestone.__main__:cli"

[dependency-groups]
dev = [
    "selenium>=2.53.6, <4.0.0",
    "pyvirtualdisplay>=3,<4",
    "pytest>=7,<8",
    "pylint>=2,<3",
    "readme-renderer>24",
    "json2xml>=3,<4",
    "standard-asyncore>=3.13.0,<4",
    "standard-imghdr>=3.13.0,<4",
    "standard-cgi>=3.13.0,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# interactives ships a JS release only -- the build pipeline no longer builds a
# Python wheel for it (build.py skips it; see the wheel() function). This file
# is kept for the `runestone` console script, the version (read by the local
# build.py webpack step), dev deps, and uv tooling. bypass-selection keeps a
# stray `uv build` from erroring on file selection.
[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.pytest.ini_options]
minversion = "6.0"
# Ignore source code produced by Sphinx. This happens because the source text for literate programming pages is a source file. Use `short tracebacks <https://docs.pytest.org/en/6.2.x/usage.html#modifying-python-traceback-printing>`_ since the default longer tracebacks produce too much noise.
addopts = "--ignore=_build --tb=short"
# The `pytest-env <https://github.com/MobileDynasty/pytest-env>`_ plugin sets these environment variables. Set them here, before imports, since bookserver imports read from the environment variables.
env = ["SERVER_CONFIG=test"]
# The _`default logging level` of INFO produces a LOT of output. Use a higher level of ``WARNING`` to reduce the noise.
log_cli_level = 30
# All async tests use the `pytest-asyncio framework <https://github.com/pytest-dev/pytest-asyncio#modes>`_.
asyncio_mode = "auto"


[tool.mypy]
ignore_missing_imports = true
