[project]
name = "rsadmin"
version = "1.0.0"
description = "Runestone server admin CLI: build books, manage the database, run migrations, and monitor builds/tracebacks."
authors = [{ name = "Brad Miller", email = "bonelake@mac.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "asyncclick==8.1.3.4",
    "click>=8.1,<9",
    "redis>=4.5.4,<5",
    "pgcli>=4.0.0,<5",
    "sqlalchemy>=2.0.0,<3",
    "alembic>=1.13.1,<2",
    "marshmallow-sqlalchemy>=1.4.1,<2",
    "psycopg2-binary>=2.9.10,<3",
    "anyio>=3.6.2,<4",
    "pydantic>=2.0.0,<3",
    "asyncpg>=0.30.0,<0.31",
    "greenlet>=3.2.0,<4",
    "pyhumps>=3.8.0,<4",
    "fastapi>=0.115.0,<0.116",
    # 20260520.0+ drops the urllib FancyURLopener import removed in Python 3.14;
    # older pydal (e.g. the 20241204 series) crashes on import under 3.14.
    "pydal>=20260520.0",
    "sphinx-reredirects>=0.1.2,<0.2",
    "lxml>=6.0,<7",
    "paver>=1.3.4,<2",
    "sphinxcontrib-paverutils>=1.17.0,<2",
    # NOTE: the `runestone` PyPI package is intentionally NOT a dependency. It
    # vendors a stale copy of rsptx.* that collides with the bricks bundled
    # here. Building legacy RST books (which shells out to a `runestone` binary)
    # is therefore unsupported from this package; PreTeXt builds still work.
    "python-dotenv>=1.0.0,<2",
    "pydantic-settings>=2.0.3,<3",
    "pretext>=2.35.0,<3",
    "pandas>=2.3.0,<3",
    "numpy>=1.0.0,<2",
    "tqdm>=4.66.4,<5",
    "rich>=13.3.5,<14",
    "textual>=0.86.0",
    "CodeChat==1.9.3",
    "cryptography>=46.0.0,<47",
    "standard-imghdr>=3.13.0,<4",
]

[project.scripts]
rsmanage = "rsptx.rsmanage.core:cli"
build_books = "rsptx.build_tools.build_books:build_books"
build_mon = "rsptx.build_tools.build_mon:main"
tbm = "rsptx.build_tools.traceback_monitor:main"
rsmigrate = "rsptx.build_tools.run_migrations:main"

[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

# Bricks are force-included at build time by the polylith-bricks hook, so
# there is no package dir named after the project for hatchling's default
# file selection -- hence bypass-selection.
[tool.hatch.build.targets.wheel]
bypass-selection = true
exclude = ["**/__pycache__", "**/*.pyc"]

# Bundle the Alembic config and migration scripts into the wheel so the
# `rsmigrate` command can find them at runtime. Sources are relative to this
# project directory; alembic.ini lives here and the migrations/ tree lives at
# the repository root (two levels up).
[tool.hatch.build.targets.wheel.force-include]
"alembic.ini" = "rsptx/build_tools/_alembic/alembic.ini"
"../../migrations" = "rsptx/build_tools/_alembic/migrations"

[tool.hatch.build.targets.wheel.hooks.polylith-bricks]

# Polylith bricks to bundle into the wheel (same set as the rsmanage project,
# which supplies rsmanage + the build_tools used by build_books/build_mon/tbm
# and the rsmigrate wrapper).
[tool.polylith.bricks]
"../../components/rsptx/db" = "rsptx/db"
"../../components/rsptx/validation" = "rsptx/validation"
"../../components/rsptx/response_helpers" = "rsptx/response_helpers"
"../../components/rsptx/configuration" = "rsptx/configuration"
"../../components/rsptx/build_tools" = "rsptx/build_tools"
"../../components/rsptx/cl_utils" = "rsptx/cl_utils"
"../../components/rsptx/logging" = "rsptx/logging"
"../../bases/rsptx/rsmanage" = "rsptx/rsmanage"
"../../components/rsptx/data_extract" = "rsptx/data_extract"
"../../components/rsptx/data_types" = "rsptx/data_types"
