[tool.poetry]
name = "rsmanage"
version = "2.0.0"
description = ""
authors = ['Brad Miller <bonelake@mac.com>']
license = ""

packages = [
    { include = "rsptx/db", from = "../../components" },
    { include = "rsptx/validation", from = "../../components" },
    { include = "rsptx/response_helpers", from = "../../components" },
    { include = "rsptx/configuration", from = "../../components" },
    { include = "rsptx/build_tools", from = "../../components" },
    { include = "rsptx/cl_utils", from = "../../components" },
    { include = "rsptx/logging", from = "../../components" },
    { include = "rsptx/rsmanage", from = "../../bases" },
    { include = "rsptx/data_extract", from = "../../components" },
    { include = "rsptx/data_types", from = "../../components" },
]

[tool.poetry.dependencies]
python = "^3.10"
asyncclick = "^8.1.3.4"
redis = "^4.5.4"
pgcli = "^3.5.0"
sqlalchemy = "^1.4.0"
psycopg2-binary = "^2.9.6"
anyio = "^3.6.2"
pydantic = { version = "^2.0.0", extras = ["dotenv"] }
asyncpg = "^0.28.0"
greenlet = "^3.0.0"
pyhumps = "^3.8.0"
fastapi = "^0.103.0"
pydal = "^20230521.1"
#myst-parser = "^1.0.0"
sphinx-reredirects = "^0.1.2"
lxml = "^5.0"
paver = "^1.3.4"
sphinxcontrib-paverutils = "^1.17.0"
runestone = "^7.0.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
pretext = "^2.8.2"
pandas = "^1.0.0"
numpy = "^1.0.0"
tqdm = "^4.66.4"
CodeChat = "1.9.3"

[tool.poetry.group.dev.dependencies]
runestone = { path = "../interactives", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# Scripts
# =======
# See `scripts <https://python-poetry.org/docs/pyproject/#scripts>`_.
[tool.poetry.scripts]
rsmanage = 'rsptx.rsmanage.core:cli'
