[tool.poetry]
name = "w2p_login_assign_grade"
version = "7.0.0"
description = ""
authors = ['Brad Miller <bonelake@mac.com>']
license = ""

packages = [
    { include = "rsptx/web2py_server", from = "../../bases" },
    { include = "rsptx/cl_utils", from = "../../components" },
]

exclude = ["**/errors/*", "**/tests", "**/__pycache__"]

[tool.poetry.dependencies]
python = "^3.10"

# This is actually an rsmanage dependency. It's here so that rsmanage can be installed without installing this, which requires Postgres (available only in the container).
altair = "^4.0.0"
beautifulsoup4 = "^4.0.0"
bleach = "> 3.1.1"
boto3 = "^1.26.30"
cryptography = "^3.0.0"
cssselect = ">= 1.0"
diff-match-patch = ">= 20110725.1"
lxml = ">= 4.6.2"
numpy = ">= 1.9.2"
oauth2 = ">=1.9"
pandas = "^1.0.0"
pathlib2 = "^2.0.0"
Paver = ">= 1.2.4"
pgcli = "^3.0.0"
pretext = "^1.0.0"
psycopg2-binary = "^2.0.0"
pyjwt = "== 2.0.1"
pylint = ">= 1.2.1"
python-dateutil = ">= 2.4.2"
pytz = ">= 2016.6.1"
requests = ">= 2.10.0"
#rsmanage = { path = "../../bases/rsptx/web2py_server/applications/runestone/rsmanage", develop = true }
runestone = ">= 7.1.0"
six = ">= 1.10.0"
Sphinx = "> 4.1.0"
sphinxcontrib-paverutils = ">= 1.17"
SQLAlchemy = ">= 1.0.14"
stripe = "^2.0.0"
pycryptodome = "^3.18.0"
jupyterlite-sphinx = "^0.8.0"
urllib3-secure-extra = "^0.1.0"
redis = "^4.3.0"
gunicorn = "^21.0.0"

# These are for testing and development.
[tool.poetry.group.dev.dependencies]
black = "~= 22.0"
CodeChat = "<1.9.4"
contextlib2 = "^0.6.0"
coverage = "^6.0.0"
coveralls = "^3.0.0"
flake8 = "^4.0.0"
html5validator = "^0.3.0"
locust = "^1.0.0"
mock = "^4.0.0"
# For building the docs with Sphinx.
myst-parser = "^1.0.0"
# For the plugin.
polling2 = "^0.5.0"
pytest = "^7.0.0"
pyvirtualdisplay = "^3.0.0"
pywin32 = { version = ">= 301", markers = "sys.platform == 'win32'" }
selenium = "^3.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
